# haskell-msgpackrpc

./: .gitignore  .travis.yml  LICENSE  README.md  msgpackrpc.cabal  stack.yaml
App/: Main.hs
src/Network/MsgpackRpc/: Core.hs  Exception.hs  Method.hs  Server.hs  Spec.hs  Util.hs
