name:                msgpackrpc
version:             0.1.0.0
synopsis:            MessagePack RPC implementation
description:         Please see README.md
homepage:            http://github.com/SimpleX91/haskell-msgpackrpc#readme
license:             BSD3
license-file:        LICENSE
author:              Anton Kondrachkov
maintainer:          Anton Kondrachkov <simplex91@gmail.com>
copyright:           2016 Anton Kondrachkov
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable server-exe
  hs-source-dirs:      App
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base
                     , basic-prelude
                     , unordered-containers
                     , mtl
                     , msgpackrpc
                     , exceptions
  -- hs-source-dirs:
  default-language:    Haskell2010
  ghc-options:
    -rtsopts
--    -threaded
    -O2
    -Wall
--    -fllvm
  ghc-prof-options:
    -rtsopts
--    -threaded
    -fprof-auto
    -fprof-cafs
    "-with-rtsopts=-p -s -h -i0.1"


library
  hs-source-dirs:      src
  exposed-modules:     Network.MsgpackRpc.Spec
                     , Network.MsgpackRpc.Core
                     , Network.MsgpackRpc.Exception
                     , Network.MsgpackRpc.Server
                     , Network.MsgpackRpc.Method

  other-modules:       Network.MsgpackRpc.Util

  build-depends:       base >= 4.7 && < 5
                     , basic-prelude
                     , msgpack >= 1.1.0
                     , bytestring
                     , unordered-containers
                     , vector
                     , mtl
                     , monad-control
                     , lifted-base
                     , exceptions >= 0.8
                     , conduit
                     , conduit-extra
                     , stm
                     , stm-conduit
                     , lifted-async
                     , cereal >=0.5
                     , cereal-conduit >=0.7.3
  default-language:    Haskell2010
  ghc-options:
    -Wall
    -Werror
    -O2
--    -fllvm

  ghc-prof-options:
    -fprof-auto
    -fprof-cafs

source-repository head
  type:     git
  location: https://github.com/SimpleX91/haskell-msgpackrpc


